# mwr_l12l2

./: .gitignore  .readthedocs.yaml  AUTHORS  README.md  pyproject.toml
.github/workflows/: CI_tests.yaml
docs/: api.rst  conf.py  index.rst  installation.rst
docs/api/: errors.rst  model.rst  retrieval.rst  utils.rst
mwr_l12l2/: errors.py  get_ecmwf.py  get_ecmwf_forecast.py  log.py  prepare_ecmwf_request.py  write_netcdf.py
mwr_l12l2/config/: L2_format.yaml  config_0-20000-0-06610_A.yaml  config_0-20000-0-06620_A.yaml  config_0-20000-0-06632_A.yaml  config_0-20000-0-07157_A.yaml  config_0-20000-0-10393_A.yaml  config_0-20000-0-10393_C.yaml  config_0-20000-0-10505_A.yaml  config_0-20000-0-16999_A.yaml  config_0-20008-0-INO_A.yaml  config_0-20008-0-IZO_A.yaml  config_0-20008-0-RUN_A.yaml  config_0-250-1001-07151_A.yaml  config_0-250-1001-75113006_A.yaml  config_0-276-0-10508_A.yaml  config_0-276-4-14995_A.yaml  config_0-276-4-14997_C.yaml  config_0-276-4-14998_A.yaml  config_50-250-1006-98518_A.yaml  log_config.yaml  mars_config.yaml  mars_config_fc.yaml  mars_config_z.yaml  retrieval_config.yaml  retrieval_config_ewc.yaml  retrival_config.yaml  tropoe_output_config.yaml
mwr_l12l2/data/ecmwf_fc/: ecmwf_fc_0-20000-0-06610_A_202304250000.grb  ecmwf_fc_0-20000-0-06610_A_202304250000_converted_to.nc  ecmwf_fc_0-20000-0-10393_A_202304250000.grb  z_ecmwf_fc_0-20000-0-06610_A.grb  z_ecmwf_fc_0-20000-0-10393_A.grb
mwr_l12l2/data/mwr/: MWR_1C01_0-20000-0-10393_A202304251400.nc
mwr_l12l2/data/tropoe/: do_not_delete
mwr_l12l2/model/ecmwf/: convert_ecmwf.sh  ecmwf_model_levels_137.csv  get_and_convert_ecmwf.sh  get_ecmwf.py  get_ecmwf.sh  grb_to_nc.sh  interpret_ecmwf.py  (+2 more)
mwr_l12l2/retrieval/: instrument_selector.py  interpret_ecmwf.py  main.py  prepare_eprofile.py  retrieval.py  retrieval_manager.py  run_tropoe.py  tropoe_helpers.py
mwr_l12l2/utils/: config_utils.py  data_utils.py  file_uitls.py  file_utils.py
tests/: test_config.py  test_file_utils.py  test_retrieval.py
(+5 files in other folders)
