[tool.poetry]
name = "mwr_l12l2"
version = "0.1.0"
description = "This sets up the retrieval of humidity and temperature from ground-based microwave radiometers and is used in E-PROFILE"
authors = ["Rolf Rüfenacht <rruefenacht@users.noreply.github.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
numpy = "^1.20"
cfgrib = "^0.9.10"
netCDF4 = "^1.6.3"
xarray = "0.21.1"
dask = "2023.1.0"
Sphinx = {version = "^6", optional = true}
sphinx-rtd-theme = {version = "^1.2.2", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
